--- a/Tengu/App.axaml
+++ b/Tengu/App.axaml
@@ -14,5 +14,6 @@
 		<StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
 
 		<StyleInclude Source="avares://Material.Avalonia/Material.Avalonia.Templates.xaml" />
+		<StyleInclude Source="avares://Material.Icons.Avalonia/App.xaml" />
 	</Application.Styles>
 </Application>
