--- a/Tengu/Views/MainWindow.axaml
+++ b/Tengu/Views/MainWindow.axaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
 		xmlns:styles="using:Material.Styles"
+		xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
         x:Class="Tengu.Views.MainWindow"
-		ExtendClientAreaToDecorationsHint="True"
         Icon="/Assets/avalonia-logo.ico"
         Title="Tengu">
 
@@ -15,12 +15,66 @@
     </Design.DataContext>
 
 	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto"/>
-			<RowDefinition />
-		</Grid.RowDefinitions>
-
-		<ToggleButton HorizontalAlignment="Left"
-					  Margin="10"/>
-	</Grid>
+	    <styles:SnackbarHost HostName="Root">
+		    <styles:NavigationDrawer Name="LeftDrawer"
+                                     LeftDrawerOpened="{Binding ElementName=NavDrawerSwitch, Path=IsChecked, Mode=TwoWay}">
+			    <styles:NavigationDrawer.LeftDrawerContent>
+				    <ScrollViewer>
+					    <StackPanel>
+                            <styles:ColorZone Mode="Accent" Height="180">
+                                <StackPanel>
+                                    <Image Width="120" Height="120" HorizontalAlignment="Center" VerticalAlignment="Top"
+                                           Margin="0,0,0,-8" />
+                                    <TextBlock Classes="Headline6" Text="Tengu" HorizontalAlignment="Center" />
+                                </StackPanel>
+                            </styles:ColorZone>
+                            <ListBox Classes="Drawer" Name="DrawerList"
+                                     Focusable="{Binding ElementName=LeftDrawer, Path=LeftDrawerOpened}">
+                                <ListBox.Styles>
+                                    <Style Selector="ListBoxItem">
+                                        <Setter Property="Height" Value="48" />
+                                        <Setter Property="Padding" Value="16,0" />
+                                        <Setter Property="VerticalContentAlignment" Value="Center" />
+                                        <Setter Property="IsEnabled" Value="{Binding $self.Content.IsEnabled}" />
+                                    </Style>
+                                </ListBox.Styles>
+                                <TextBlock Classes="Body2" Text="Home" />
+                                <TextBlock Classes="Body2" Text="Latest Episodes" />
+                                <TextBlock Classes="Body2" Text="Upcoming Animes" />
+                                <TextBlock Classes="Body2" Text="Search Animes" />
+                                <TextBlock Classes="Body2" Text="Calendar" />
+                                <TextBlock Classes="Body2" Text="Downloads" />
+                                <TextBlock Classes="Body2" Text="Settings" />
+                                <TextBlock Classes="Body2" Text="About" />
+                            </ListBox>
+                        </StackPanel>
+				    </ScrollViewer>		
+			    </styles:NavigationDrawer.LeftDrawerContent>
+		
+				<DockPanel LastChildFill="true">
+		              <ToggleButton Name="NavDrawerSwitch"
+									HorizontalAlignment="Left"
+									VerticalAlignment="Top"
+									Margin="5"
+                                    Classes="Flat TransparentBack"
+                                    Width="32" Height="32" Padding="4">
+                        <avalonia:MaterialIcon Kind="Menu" Width="24" Height="24" />
+                      </ToggleButton>
+				
+			          <Carousel Name="PageCarousel"
+                                HorizontalAlignment="Stretch">
+				        <Carousel.Styles>
+                                <Style Selector="Carousel#PageCarousel:not(.notransitions)">
+                                    <Setter Property="PageTransition">
+                                        <PageSlide Duration="0.25" SlideOutEasing="CircularEaseOut"
+                                                   SlideInEasing="CircularEaseOut" />
+                                    </Setter>
+                                </Style>
+                            </Carousel.Styles>
+			          </Carousel>
+	            </DockPanel>
+		    </styles:NavigationDrawer>
+	    </styles:SnackbarHost>
+	
+    </Grid>
 </Window>
