--- a/Tengu/Views/HomePage.axaml
+++ b/Tengu/Views/HomePage.axaml
@@ -7,6 +7,8 @@
 		xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
              x:Class="Tengu.Views.HomePage">
 	<Panel Margin="40">
-		
+		<TextBlock Text="Tengu" 
+				   HorizontalAlignment="Center"
+				   FontSize="20"/>
 	</Panel>
 </UserControl>
