--- a/Tengu/Views/MainWindow.axaml
+++ b/Tengu/Views/MainWindow.axaml
@@ -72,6 +72,9 @@
 
 							  <!-- Main page -->
 							  <local:HomePage />
+
+							  <!-- Main page -->
+							  <local:LatestEpisodesPage />
 			              </Carousel>
 						</Border>
 					</ScrollViewer>
