--- a/Tengu/Views/LatestEpisodesPage.axaml
+++ b/Tengu/Views/LatestEpisodesPage.axaml
@@ -31,13 +31,12 @@
 						  assist:ComboBoxAssist.Label="Host"
 						  Items="{Binding HostList}"
 						  HorizontalAlignment="Right"
-						  SelectedItem="{Binding SelectedHost}"
-						  Margin="10,0,0,0">
+						  SelectedItem="{Binding SelectedHost}">
 				</ComboBox>
 			</Grid>
 
 			<Grid Grid.Row="1"
-				  Margin="10">
+				  Margin="0,10">
 				<ScrollViewer IsVisible="{Binding !LoadingAnimes}">
 
 					<ItemsControl Items="{Binding AnimeList}">
@@ -50,12 +49,34 @@
 						
 						<ItemsControl.ItemTemplate>
 							<DataTemplate>
-								<styles:Card Width="150" Margin="5"
-											 Height="200">
-									<TextBlock Text="{Binding}"
-											   VerticalAlignment="Center"
-											   HorizontalAlignment="Center" />
-								</styles:Card>
+								<Grid Width="170" 
+									  Margin="5,5,5,20">
+									<Grid.RowDefinitions>
+										<RowDefinition />
+										<RowDefinition />
+										<RowDefinition Height="Auto"/>
+									</Grid.RowDefinitions>
+									
+									<styles:Card Width="150"
+												 HorizontalAlignment="Left"
+												 Grid.RowSpan="2"
+												 Padding="0"
+												 Height="200">
+										<Button Classes="Flat">
+											
+										</Button>
+									</styles:Card>
+									
+									<styles:FloatingButton  HorizontalAlignment="Right"
+															Grid.Row="1" Classes="Mini">
+										<avalonia:MaterialIcon Kind="Download" />
+									</styles:FloatingButton>
+
+									<StackPanel Grid.Row="2" Margin="0,5,0,0">
+										<TextBlock Text="{Binding}" FontSize="15"/>
+										<TextBlock Text="{Binding}" Opacity=".7"/>
+									</StackPanel>
+								</Grid>
 							</DataTemplate>
 						</ItemsControl.ItemTemplate>
 					</ItemsControl>
