--- a/Tengu/Views/UpcomingPage.axaml
+++ b/Tengu/Views/UpcomingPage.axaml
@@ -7,11 +7,11 @@
 			 xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
 			 xmlns:styles="using:Material.Styles"
 			 xmlns:assist="clr-namespace:Material.Styles.Assists;assembly=Material.Styles"
-             x:Class="Tengu.Views.LatestEpisodesPage">
+             x:Class="Tengu.Views.UpcomingPage">
 	<UserControl.DataContext>
-		<vm:LatestEpisodesPageViewModel />
+		<vm:UpcomingPageViewModel />
 	</UserControl.DataContext>
-	
+
 	<Panel Margin="40">
 		<Grid>
 			<Grid.RowDefinitions>
@@ -20,23 +20,14 @@
 				<RowDefinition Height="Auto"/>
 			</Grid.RowDefinitions>
 
-			<Grid>
-				<TextBlock Text="Latest Episodes"
-						   FontSize="20"
-						   HorizontalAlignment="Center"
-						   VerticalAlignment="Center"
-						   FontWeight="DemiBold"/>
-
-				<ComboBox Width="200"
-						  assist:ComboBoxAssist.Label="Host"
-						  Items="{Binding HostList}"
-						  HorizontalAlignment="Right"
-						  SelectedItem="{Binding SelectedHost}">
-				</ComboBox>
-			</Grid>
+			<TextBlock Text="Upcoming Animes"
+					   FontSize="20"
+					   HorizontalAlignment="Center"
+					   VerticalAlignment="Center"
+					   FontWeight="DemiBold"/>
 
 			<Grid Grid.Row="1"
-				  Margin="0,10">
+	  Margin="0,10">
 				<ScrollViewer IsVisible="{Binding !LoadingAnimes}">
 
 					<ItemsControl Items="{Binding AnimeList}">
@@ -47,27 +38,27 @@
 										   VerticalAlignment="Center"/>
 							</ItemsPanelTemplate>
 						</ItemsControl.ItemsPanel>
-						
+
 						<ItemsControl.ItemTemplate>
 							<DataTemplate>
-								<Grid Width="170" 
+								<Grid Width="170"
 									  Margin="5,5,5,20">
 									<Grid.RowDefinitions>
 										<RowDefinition />
 										<RowDefinition />
 										<RowDefinition Height="Auto"/>
 									</Grid.RowDefinitions>
-									
+
 									<styles:Card Width="150"
 												 HorizontalAlignment="Left"
 												 Grid.RowSpan="2"
 												 Padding="0"
 												 Height="200">
 										<Button Classes="Flat">
-											
+
 										</Button>
 									</styles:Card>
-									
+
 									<styles:FloatingButton  HorizontalAlignment="Right"
 															Grid.Row="1" Classes="Mini">
 										<avalonia:MaterialIcon Kind="Download" />
@@ -81,7 +72,7 @@
 							</DataTemplate>
 						</ItemsControl.ItemTemplate>
 					</ItemsControl>
-				
+
 				</ScrollViewer>
 
 				<StackPanel VerticalAlignment="Center"
@@ -98,23 +89,6 @@
 					</styles:Card>
 				</StackPanel>
 			</Grid>
-			
-			<StackPanel Orientation="Horizontal"
-						Grid.Row="2"
-						HorizontalAlignment="Center">
-				<Button Classes="Accent Flat"
-						IsEnabled="{Binding CanPrev}">
-					<avalonia:MaterialIcon Kind="ArrowLeft" />
-				</Button>
-
-				<TextBlock Text="{Binding CurrentPage, StringFormat={}Page {0}}"
-						   Margin="10,0"
-						   VerticalAlignment="Center"/>
-
-				<Button Classes="Accent Flat">
-					<avalonia:MaterialIcon Kind="ArrowRightBold" />
-				</Button>
-			</StackPanel>
 		</Grid>
 	</Panel>
 </UserControl>
