--- a/Tengu/Views/MainWindow.axaml
+++ b/Tengu/Views/MainWindow.axaml
@@ -69,6 +69,9 @@
 
 				<!-- Upcoming page -->
 				<local:UpcomingPage />
+
+				<!-- Search page -->
+				<local:SearchPage />
 			</Carousel>
 		</Border>
 
