--- a/Tengu/App.axaml
+++ b/Tengu/App.axaml
@@ -8,7 +8,7 @@
     </Application.DataTemplates>
 
 	<Application.Resources>
-		<themes:BundledTheme BaseTheme="Dark" PrimaryColor="DeepPurple" SecondaryColor="Amber"/>
+		<themes:BundledTheme BaseTheme="Dark" PrimaryColor="Indigo" SecondaryColor="Amber"/>
 	</Application.Resources>
 	<Application.Styles>
 		<StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
