--- a/Tengu/Views/SearchPage.axaml
+++ b/Tengu/Views/SearchPage.axaml
@@ -5,6 +5,7 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
 			 xmlns:vm="using:Tengu.ViewModels"
 			 xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
+			 xmlns:asyncImageLoader="clr-namespace:AsyncImageLoader;assembly=AsyncImageLoader.Avalonia"
 			 xmlns:styles="using:Material.Styles"
 			 xmlns:assist="clr-namespace:Material.Styles.Assists;assembly=Material.Styles"
              x:Class="Tengu.Views.SearchPage">
@@ -34,33 +35,31 @@
 
 						<ItemsControl.ItemTemplate>
 							<DataTemplate>
-								<Grid Width="170"
-									  Margin="5,5,5,20">
+								<Grid Margin="10"
+									  Width="141">
 									<Grid.RowDefinitions>
-										<RowDefinition />
 										<RowDefinition />
 										<RowDefinition Height="Auto"/>
 									</Grid.RowDefinitions>
 
-									<styles:Card Width="150"
-												 HorizontalAlignment="Left"
-												 Grid.RowSpan="2"
+									<styles:Card Width="141"
 												 Padding="0"
 												 Height="200">
-										<Button Classes="Flat">
-
+										<Button Classes="Flat"
+												Padding="0">
+											<Button.Content>
+												<Image asyncImageLoader:ImageLoader.Source="{Binding Image}"
+													   Stretch="UniformToFill"
+													   RenderOptions.BitmapInterpolationMode="HighQuality"/>
+											</Button.Content>
 										</Button>
 									</styles:Card>
 
-									<styles:FloatingButton  HorizontalAlignment="Right"
-															Grid.Row="1" Classes="Mini">
-										<avalonia:MaterialIcon Kind="Download" />
-									</styles:FloatingButton>
-
-									<StackPanel Grid.Row="2" Margin="0,5,0,0">
-										<TextBlock Text="{Binding}" FontSize="15"/>
-										<TextBlock Text="{Binding}" Opacity=".7"/>
-									</StackPanel>
+									<TextBlock Text="{Binding Title}"
+											   Grid.Row="1"
+											   ToolTip.Tip="{Binding Title}"
+											   Margin="0,5,0,0"
+											   FontSize="15"/>
 								</Grid>
 							</DataTemplate>
 						</ItemsControl.ItemTemplate>
