--- a/Tengu/App.axaml
+++ b/Tengu/App.axaml
@@ -3,18 +3,14 @@
 			 xmlns:themes="clr-namespace:Material.Styles.Themes;assembly=Material.Styles"
              xmlns:local="using:Tengu"
              x:Class="Tengu.App">
-    <Application.DataTemplates>
-        <local:ViewLocator/>
-    </Application.DataTemplates>
-
-	<Application.Resources>
-		<themes:BundledTheme BaseTheme="Dark" PrimaryColor="Indigo" SecondaryColor="Amber"/>
-	</Application.Resources>
 	<Application.Styles>
 		<StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
 
 		<StyleInclude Source="avares://Material.Avalonia/Material.Avalonia.Templates.xaml" />
 		<StyleInclude Source="avares://Material.Icons.Avalonia/App.xaml" />
 		<StyleInclude Source="avares://Paginator.Avalonia/View/PaginatorControl.xaml" />
+
+		<themes:MaterialTheme BaseTheme="Dark" PrimaryColor="Indigo" SecondaryColor="Amber"/>
 	</Application.Styles>
+	
 </Application>
