--- a/Tengu/Views/UpcomingPage.axaml
+++ b/Tengu/Views/UpcomingPage.axaml
@@ -20,48 +20,82 @@
 				<RowDefinition Height="Auto"/>
 			</Grid.RowDefinitions>
 
-			<TextBlock Text="Upcoming Animes"
-					   FontSize="20"
-					   HorizontalAlignment="Center"
-					   VerticalAlignment="Center"
-					   FontWeight="DemiBold"/>
+			<styles:Card HorizontalAlignment="Center" Padding="0"
+						 IsEnabled="{Binding !LoadingAnimes}">
+				<StackPanel Orientation="Horizontal">
+					<Image Source="/Assets/kitsu.png" Margin="5"
+						   Stretch="Uniform" Height="20"
+						   RenderOptions.BitmapInterpolationMode="HighQuality"/>
+					<TextBlock Text="Kitsu API" FontSize="15"
+							   VerticalAlignment="Center"/>
+					<Button Classes="Flat" Margin="10,0"
+							Command="{Binding UpcomingCommand}"
+							Content="Upcoming" FontSize="15">
+						
+					</Button>
 
-			<Grid Grid.Row="1"
-	  Margin="0,10">
+					<TextBlock Text="or" FontSize="15"
+							   VerticalAlignment="Center"/>
+					
+					<TextBox Classes="Solo" 
+							 Padding="0"
+							 Text="{Binding AnimeTitle}"
+							 Margin="5,0,0,0"
+							 Width="200"
+							 Watermark="Search Anime Here..">
+						<TextBox.InnerRightContent>
+							<Button Classes="Flat" Padding="4" Width="{Binding $self.Bounds.Height}"
+									Command="{Binding SearchCommand}"
+									Content="{avalonia:MaterialIconExt Search, Size=24}" />
+						</TextBox.InnerRightContent>
+					</TextBox>
+				</StackPanel>
+			</styles:Card>
+
+
+			<Grid Grid.Row="1" Margin="0,10">
 				<ScrollViewer IsVisible="{Binding !LoadingAnimes}">
 
 					<ItemsControl Items="{Binding AnimeList}">
 						<ItemsControl.ItemsPanel>
 							<ItemsPanelTemplate>
-								<WrapPanel Orientation="Horizontal"
-										   HorizontalAlignment="Center"
-										   VerticalAlignment="Center"/>
+								<StackPanel HorizontalAlignment="Stretch"
+										    Spacing="5" 
+											VerticalAlignment="Top"/>
 							</ItemsPanelTemplate>
 						</ItemsControl.ItemsPanel>
 
 						<ItemsControl.ItemTemplate>
 							<DataTemplate>
-								<Grid Margin="5,5,5,20">
-									<Grid.RowDefinitions>
-										<RowDefinition />
-										<RowDefinition Height="Auto"/>
-									</Grid.RowDefinitions>
+								<styles:Card HorizontalAlignment="Stretch"
+											 Margin="20,0">
+									<Grid>
+										<Grid.ColumnDefinitions>
+											<ColumnDefinition Width="Auto"/>
+											<ColumnDefinition />
+										</Grid.ColumnDefinitions>
 
-									<styles:Card Width="150"
-												 HorizontalAlignment="Left"
-												 Padding="0"
-												 Height="200">
-										<Button Classes="Flat">
+										<styles:Card Width="150"
+													 HorizontalAlignment="Left"
+													 Padding="0"
+													 Height="200">
+											<Button Classes="Flat">
 
-										</Button>
-									</styles:Card>
+											</Button>
+										</styles:Card>
 
+										<Grid Margin="5">
+											<Grid.RowDefinitions>
+												<RowDefinition Height="Auto"/>
+												<RowDefinition />
+											</Grid.RowDefinitions>
 
-									<TextBlock Text="{Binding}" Margin="0,5,0,0"
-											   TextWrapping="Wrap"
-											   MaxLines="2" Grid.Row="1"
-											   ToolTip.Tip="{Binding}"/>
-								</Grid>
+											<TextBlock Text="{Binding}"
+													   TextWrapping="Wrap"
+													   ToolTip.Tip="{Binding}"/>
+										</Grid>
+									</Grid>
+								</styles:Card>
 							</DataTemplate>
 						</ItemsControl.ItemTemplate>
 					</ItemsControl>
