--- a/Tengu/Views/UpcomingPage.axaml
+++ b/Tengu/Views/UpcomingPage.axaml
@@ -30,7 +30,9 @@
 							   VerticalAlignment="Center"/>
 					<Button Classes="Flat" Margin="10,0"
 							Command="{Binding UpcomingCommand}"
-							Content="Upcoming" FontSize="15">
+							CornerRadius="0"
+							Content="Upcoming" 
+							FontSize="15">
 						
 					</Button>
 
@@ -79,20 +81,55 @@
 													 HorizontalAlignment="Left"
 													 Padding="0"
 													 Height="200">
-											<Button Classes="Flat">
+											<Grid>
+												<Image />
 
-											</Button>
+												<Button Margin="5" Padding="5"
+														HorizontalAlignment="Right"
+														VerticalAlignment="Bottom">
+													<avalonia:MaterialIcon Kind="OpenInNew" />
+												</Button>
+											</Grid>
 										</styles:Card>
 
-										<Grid Margin="5">
+										<Grid Margin="10,0"
+											  Grid.Column="1">
 											<Grid.RowDefinitions>
 												<RowDefinition Height="Auto"/>
 												<RowDefinition />
 											</Grid.RowDefinitions>
 
-											<TextBlock Text="{Binding}"
+											<StackPanel>
+												<TextBlock Text="{Binding Title}"
+														   FontSize="15"
+														   TextWrapping="Wrap"
+														   ToolTip.Tip="{Binding Title}"/>
+
+												<Grid Margin="0,5">
+													<Grid.ColumnDefinitions>
+														<ColumnDefinition />
+														<ColumnDefinition />
+													</Grid.ColumnDefinitions>
+													<Grid.RowDefinitions>
+														<RowDefinition />
+														<RowDefinition />
+														<RowDefinition />
+													</Grid.RowDefinitions>
+
+													<TextBlock Grid.Row="0" Text="{Binding ReleaseDate, StringFormat={}Release Date: {0}}" />
+													<TextBlock Grid.Row="1" Text="{Binding TotalEpisodes, StringFormat={}Total Episodes: {0}}" />
+													<TextBlock Grid.Row="2" Text="{Binding RatingRank, StringFormat={}Rating: {0}}" />
+
+													<TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding AgeRating, StringFormat={}Age Rating: {0}}" />
+													<TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding AverageRating, StringFormat={}Average Rating: {0}%}" />
+													<TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding PopularityRank, StringFormat={}Popularity: {0}}" />
+												</Grid>
+											</StackPanel>
+
+											<TextBlock Text="{Binding Synopsis}"
+													   Grid.Row="1"
 													   TextWrapping="Wrap"
-													   ToolTip.Tip="{Binding}"/>
+													   ToolTip.Tip="{Binding Synopsis}"/>
 										</Grid>
 									</Grid>
 								</styles:Card>
@@ -116,6 +153,27 @@
 					</styles:Card>
 				</StackPanel>
 			</Grid>
+
+			<StackPanel Orientation="Horizontal"
+						IsEnabled="{Binding !LoadingAnimes}"
+						Grid.Row="2"
+						HorizontalAlignment="Center">
+				<Button Classes="Flat"
+						Command="{Binding PrevCommand}"
+						IsEnabled="{Binding CanPrev}">
+					<avalonia:MaterialIcon Kind="ArrowLeft" />
+				</Button>
+
+				<TextBlock Text="{Binding CurrentPage, StringFormat={}Page {0}}"
+						   Margin="10,0"
+						   VerticalAlignment="Center"/>
+
+				<Button Classes="Flat"
+						Command="{Binding NextCommand}"
+						IsEnabled="{Binding CanNext}">
+					<avalonia:MaterialIcon Kind="ArrowRightBold" />
+				</Button>
+			</StackPanel>
 		</Grid>
 	</Panel>
 </UserControl>
