--- a/Tengu/Views/CalendarPage.axaml
+++ b/Tengu/Views/CalendarPage.axaml
@@ -3,6 +3,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Tengu.Views.CalendarPage">
-  Welcome to Avalonia!
+             x:Class="Tengu.Views.CalendarPage"
+			 xmlns:vm="using:Tengu.ViewModels"
+			 xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
+			 xmlns:styles="using:Material.Styles"
+			 xmlns:assist="clr-namespace:Material.Styles.Assists;assembly=Material.Styles">
+	<UserControl.DataContext>
+		<vm:CalendarPageViewModel />
+	</UserControl.DataContext>
 </UserControl>
